fix jumping bg complete-signup

--- a/src/features/user/CompleteSignup/CompleteSignup.module.scss
+++ b/src/features/user/CompleteSignup/CompleteSignup.module.scss
@@ -2,7 +2,6 @@
 
 // entire page
 .signUpPage{
-  background-size: cover;
   min-height: 100vh;
   display:flex;
   align-items:center;
